<resources>
    <string name="app_name">Calculator</string>
    <string name="input_text">InputText</string>
    <string name="answer_text">AnswerText</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="equal_sign">=</string>
    <string name="left_arrow">&lt;</string>
    <string name="right_arrow">&gt;</string>
    <string name="reset">Reset</string>
    <string name="delete">Delete</string>
    <string name="opening_parenthesis">(</string>
    <string name="closing_parenthesis">)</string>
    <string name="dot">.</string>
    <string name="fraction">a/b</string>
    <string name="number">123</string>




</resources>
