<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/InputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/input_text"
        android:inputType="text"
        android:textSize="30sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/AnswerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/InputText"
        android:text="@string/answer_text"
        android:textAlignment="textEnd"
        android:textSize="25sp"/>

    <View
        android:id="@+id/FractionDivider"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_below="@id/AnswerText"
        android:layout_alignParentEnd="true"
        android:background="@drawable/line" />

    <TextView
        android:id="@+id/AnswerTextDenominator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/FractionDivider"
        android:text="@string/answer_text"
        android:textAlignment="textEnd"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/ButtonParenC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closing_parenthesis"
        android:layout_above="@id/ButtonAdd"
        android:layout_alignStart="@id/ButtonAdd"/>
    <Button
        android:id="@+id/ButtonParenO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opening_parenthesis"
        android:layout_above="@id/ButtonAdd"
        android:layout_toStartOf="@id/ButtonParenC"/>
    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"/>
    <Button
        android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:layout_toEndOf="@+id/Button1"
        android:layout_alignBottom="@id/Button1"/>
    <Button
        android:id="@+id/Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:layout_toEndOf="@+id/Button2"
        android:layout_alignBottom="@id/Button1"/>
    <Button
        android:id="@+id/Button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:layout_below="@id/Button1" />
    <Button
        android:id="@+id/Button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:layout_toEndOf="@+id/Button4"
        android:layout_below="@id/Button2"/>
    <Button
        android:id="@+id/Button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:layout_toEndOf="@+id/Button5"
        android:layout_below="@id/Button3"/>
    <Button
        android:id="@+id/Button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:layout_below="@id/Button4" />
    <Button
        android:id="@+id/Button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:layout_below="@id/Button5"
        android:layout_toEndOf="@+id/Button7" />
    <Button
        android:id="@+id/Button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:layout_below="@id/Button5"
        android:layout_toEndOf="@+id/Button8" />
    <Button
        android:id="@+id/Button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:layout_below="@id/Button7"/>
    <Button
        android:id="@+id/ButtonDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:layout_alignBaseline="@id/Button0"
        android:layout_toEndOf="@id/Button0"/>
    <Button
        android:id="@+id/ButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:layout_alignBaseline="@id/Button1"
        android:layout_toEndOf="@id/Button3"/>
    <Button
        android:id="@+id/ButtonSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:layout_below="@id/ButtonAdd"
        android:layout_toEndOf="@id/Button6"/>
    <Button
        android:id="@+id/ButtonMulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:layout_below="@id/ButtonSub"
        android:layout_toEndOf="@id/Button9"/>
    <Button
        android:id="@+id/ButtonDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/divide"
        android:layout_below="@id/ButtonMulti"
        android:layout_toEndOf="@id/Button9"/>
    <Button
        android:id="@+id/ButtonSolve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/equal_sign"
        android:layout_alignBaseline="@id/ButtonDiv"
        android:layout_toStartOf="@id/ButtonDiv"/>
    <Button
        android:id="@+id/ButtonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_arrow"
        android:layout_below="@id/ButtonSolve"
        android:layout_toStartOf="@id/ButtonDiv"/>
    <Button
        android:id="@+id/ButtonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_arrow"
        android:layout_below="@id/ButtonSolve"
        android:layout_toEndOf="@id/ButtonSolve"/>
    <Button
        android:id="@+id/ButtonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_alignBaseline="@id/ButtonDel"
        android:layout_toEndOf="@id/Button0"/>
    <Button
        android:id="@+id/ButtonDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_below="@id/Button0"/>
    <ToggleButton
        android:id="@+id/ButtonFraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/fraction"
        android:textOff="@string/number"
        android:layout_alignBaseline="@id/ButtonParenO"
        android:layout_toStartOf="@id/Button2"
        />



</RelativeLayout>